[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num = "0.4.0"
once_cell = "1.16.0"
regex = "1.7.0"
