[package]
author = "Sam Tarver"
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

[lib]
name = "lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
itertools = "0.10.5"
log = "0.4.17"
num = "0.4.0"
once_cell = "1.16.0"
regex = "1.7.0"
